--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^2.0.2",
-    "openai": "^4.97.0",
+    "openai": "^5.10.2",
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
@@ -25,9 +25,12 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.15.3",
     "@types/pdf-parse": "^1.1.5",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
     "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.8",
     "nodemon": "^3.1.10",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
