--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "build": "tsc",
     "start": "node --env-file=.env dist/server.js",
     "dev": "nodemon --exec node --env-file=.env -r ts-node/register src/server.ts",
-    "lint": "eslint 'src/**/*.ts'"
+    "lint": "eslint 'src/**/*.ts'",
+    "prod": "yarn build && forever stopall && forever start dist/server.js"
   },
   "keywords": [],
   "author": "",
