--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node --env-file=.env dist/server.js",
     "dev": "nodemon --exec node --env-file=.env -r ts-node/register src/server.ts",
     "lint": "eslint 'src/**/*.ts'",
-    "prod": "yarn build && forever stopall && forever start dist/server.js"
+    "prod": "yarn build && forever stopall && forever start -c \"npm run start\" ./"
   },
   "keywords": [],
   "author": "",
