--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
+    "prod": "yarn build && forever start -c \"npm run start\" ./",
     "lint": "next lint"
   },
   "dependencies": {
